--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,11 @@
 pt-BR:
+  activerecord:
+    models:
+      user: usuário
+    attributes:
+      user:
+        password: Senha
+        
   home:
     subscribe:
       print_voucher: "Imprimir voucher e ir até a unidade"
