check if voucher payment was processed when returning to site

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -43,3 +43,11 @@ pt-BR:
       previous: "&lsaquo; Anterior"
       next: "Próxima &rsaquo;"
       truncate: "..."
+
+  akatus:
+    payment:
+      status:
+        waiting: Aguardando Pagamento
+        on_approval: Em Análise
+        approved: Aprovado
+        canceled: Cancelado
