akatus connection erros i18n

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -56,3 +56,7 @@ pt-BR:
         on_approval: Em Análise
         approved: Aprovado
         canceled: Cancelado
+    errors:
+      messages:
+        connection_failed: Ocorreu um erro ao tentar processar seu pagamento. Tente novamente mais tarde!
+        time_out: Ocorreu um erro ao tentar processar seu pagamento. Tente novamente mais tarde!
